benchmark/manifests/target-metrics/metrics-agent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: benchmarkmetrics
  labels:
    app: benchmarkmetrics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: benchmarkmetrics
  template:
    metadata:
      labels:
        app: benchmarkmetrics
    spec:
      serviceAccountName: benchmarkmetrics
      terminationGracePeriodSeconds: 10
      securityContext:
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: server
        image: benchmarkservice
        imagePullPolicy: IfNotPresent
        command: ["python", "metrics_server.py"]
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 2
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            cpu: 100m
            memory: 48Mi
          limits:
            cpu: 500m
            memory: 256Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
          readOnlyRootFilesystem: true
        volumeMounts:
        - name: nats-ca
          mountPath: /etc/nats-ca
          readOnly: true
      volumes:
      - name: nats-ca
        configMap:
          name: nats-ca
---
apiVersion: v1
kind: Service
metadata:
  name: benchmarkmetrics-external
  labels:
    app: benchmarkmetrics
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  type: LoadBalancer
  selector:
    app: benchmarkmetrics
  ports:
  - name: http
    port: 80
    targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: benchmarkmetrics-access-and-collection
spec:
  podSelector:
    matchLabels:
      app: benchmarkmetrics
  policyTypes: ["Ingress", "Egress"]
  ingress:
  - ports:
    - protocol: TCP
      port: 8080
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: nats
      podSelector:
        matchLabels:
          app.kubernetes.io/name: nats
    ports:
    - protocol: TCP
      port: 4222
    - protocol: TCP
      port: 7777
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - protocol: TCP
      port: 443
    - protocol: TCP
      port: 6443
